--- a/package.json
+++ b/package.json
@@ -13,5 +13,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "socket.io": "^2.1.1"
-  }
+  },
+  "devDependencies":{},
+  description": ""
 }
